--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/three": "^0.148.0",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "csv-parse": "^5.3.3",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
