--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "threejs-test",
+  "name": "stellar-neighbourhood",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
+    "lint": "oxlint --fix"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@types/node": "^18.11.18",
-    "@types/three": "^0.148.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "csv-parse": "^5.3.3",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.3",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.0"
+    "@types/node": "^22.13.0",
+    "@types/three": "^0.173.0",
+    "csv-parse": "^5.6.0",
+    "typescript": "^5.7.0",
+    "vite": "^6.0.0",
+    "oxlint": "^0.15.9"
   },
   "dependencies": {
     "three": "^0.148.0"
